--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/light_orange">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/driverNameLayout"
@@ -11,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="32dp"
-        app:boxStrokeColor="#FF9100"
-        app:hintTextColor="#FF9100"
+        app:boxStrokeColor="#1E1E1E"
+        app:hintTextColor="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
-        app:boxStrokeColor="#FF9100"
-        app:hintTextColor="#FF9100"
+        app:boxStrokeColor="#1E1E1E"
+        app:hintTextColor="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +60,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
-        app:boxStrokeColor="#FF9100"
-        app:hintTextColor="#FF9100"
+        app:boxStrokeColor="#1E1E1E"
+        app:hintTextColor="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,8 +85,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
-        app:boxStrokeColor="#FF9100"
-        app:hintTextColor="#FF9100"
+        app:boxStrokeColor="#1E1E1E"
+        app:hintTextColor="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,8 +110,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
-        app:boxStrokeColor="#FF9100"
-        app:hintTextColor="#FF9100"
+        app:boxStrokeColor="#1E1E1E"
+        app:hintTextColor="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,9 +134,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="24dp"
-        android:background="#EAE8DE"
-        android:text="Sign Up"
-        android:textColor="@color/black"
+        android:background="@color/orange"
+        android:text="SIGN UP"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
