--- a/app/src/main/res/layout/student_attendance_card_view.xml
+++ b/app/src/main/res/layout/student_attendance_card_view.xml
@@ -37,11 +37,11 @@
             android:layout_marginEnd="24dp"
             android:background="#ADADAD"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintEnd_toStartOf="@+id/imageView_student_detail"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView_student_detail"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="16dp"
